Atualizar o style.css

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 #timer {
     font-size: 90px;
     font-family: 'Roboto Condensed', sans-serif;
-    font-weight: bold;
+    font-weight: 300;
     margin-top: 20px;
 }
 
