--- a/style.css
+++ b/style.css
@@ -43,10 +43,7 @@ video {
 }
 
 button {
-    padding: 10px 20px;
-    font-size: 18px;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 200;
+    padding: 10px;
     margin: 5px;
     background-color: #ffffff;
     border-radius: 30px;
