Atualizar o style.css

--- a/style.css
+++ b/style.css
@@ -10,6 +10,26 @@ body {
     overflow: hidden;
 }
 
+.animated-background {
+    background: linear-gradient (
+        to right,#833ab4,
+        #fd1d1d, #fcbe45);
+    background-size: 400% 400%;
+    animation: animate-background 10s infinite ease-in-out;
+}
+@keyframes animate-background {
+    0%{
+        background-position: 0 50%;
+    ｝
+    50%{
+        background-position: 100% 50%;
+    }
+    100%{
+        background-position: 0 50%;
+    }
+}
+
+
 .container {
     text-align: center;
     color: white;
